--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="vendors/jquery.js"></script>
-        <script src="client.js"></script>
+        <script src="scripts/client.js"></script>
         <link rel='stylesheet' type="text/css" href='views/styles.css'>
     </head>
     <body>
