added css, with help got ordering and verification

--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="vendors/jquery.js"></script>
     <script src="scripts/client.js"></script>
-    <link rel='stylesheet' type="text/css" href='views/styles.css'>
+   <link rel='stylesheet' type="text/css" href='views/styles.css'>
 </head>
 
 <body>
+    <div id='background'>
     <h1 id='title'>To Do List<br><span>(weekend challenge 3)</span></h1>
     <button id='createTask'>Create New Task</button>
     <div id='toDo'>
@@ -34,6 +35,7 @@
                 </tbody>
             </table>
         </div>
+    </div>
     </div>
 </body>
 
